@@ -17,3 +17,6 @@ Fix up all those annoying typos that come up far too often.
 The word list of typos and their corrections is called \file{AutoSpellList.csv} and is stored in the user's MyBrailleR folder. The file can be updated to meet the user's specific needs. It should not be over-written by a new installation of BrailleR.
 }
 
+\author{
+A. Jonathan R. Godfrey
+}
